空の一覧を表示する

--- a/DoneDoneMemo/Base.lproj/Main.storyboard
+++ b/DoneDoneMemo/Base.lproj/Main.storyboard
@@ -33,7 +33,19 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="e7W-Re-lbF">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="e7W-Re-lbF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6rY-l3-NgF"/>
+                            <constraint firstItem="e7W-Re-lbF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DCh-jv-bg7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="e7W-Re-lbF" secondAttribute="bottom" id="RQP-Ka-PsA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="e7W-Re-lbF" secondAttribute="trailing" id="ecx-5X-kZe"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="bwC-wo-Ey6"/>
