メモ一覧にダミーデータ表示

--- a/DoneDoneMemo/View/StoryBoard/Base.lproj/Main.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/Base.lproj/Main.storyboard
@@ -49,6 +49,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="bwC-wo-Ey6"/>
+                    <connections>
+                        <outlet property="tableView" destination="e7W-Re-lbF" id="1et-g8-tzr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
