--- a/DoneDoneMemo/View/StoryBoard/MemoViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/MemoViewController.storyboard
@@ -18,27 +18,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1ee-4X-EBP">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4AP-4a-2XF">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
+                                <connections>
+                                    <segue destination="ZrF-VG-yoy" kind="embed" id="whd-w5-q0m"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="NKJ-Uj-pdR" firstAttribute="trailing" secondItem="1ee-4X-EBP" secondAttribute="trailing" id="58M-HV-KY2"/>
-                            <constraint firstItem="1ee-4X-EBP" firstAttribute="leading" secondItem="NKJ-Uj-pdR" secondAttribute="leading" id="Cp7-UZ-rei"/>
-                            <constraint firstItem="1ee-4X-EBP" firstAttribute="top" secondItem="NKJ-Uj-pdR" secondAttribute="top" id="Dw7-K9-qhp"/>
-                            <constraint firstItem="NKJ-Uj-pdR" firstAttribute="bottom" secondItem="1ee-4X-EBP" secondAttribute="bottom" id="b9L-fA-hdO"/>
+                            <constraint firstItem="4AP-4a-2XF" firstAttribute="leading" secondItem="NKJ-Uj-pdR" secondAttribute="leading" id="6fL-sG-6SC"/>
+                            <constraint firstItem="4AP-4a-2XF" firstAttribute="top" secondItem="NKJ-Uj-pdR" secondAttribute="top" id="NUT-ad-lnv"/>
+                            <constraint firstItem="NKJ-Uj-pdR" firstAttribute="bottom" secondItem="4AP-4a-2XF" secondAttribute="bottom" id="hS3-Wb-YYa"/>
+                            <constraint firstItem="4AP-4a-2XF" firstAttribute="trailing" secondItem="NKJ-Uj-pdR" secondAttribute="trailing" id="jUi-OP-KGA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NKJ-Uj-pdR"/>
                     </view>
-                    <connections>
-                        <outlet property="tableView" destination="1ee-4X-EBP" id="O0f-nM-ScA"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x4P-ns-f4d" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="321" y="117"/>
+        </scene>
+        <!--Memo Container View Controller-->
+        <scene sceneID="j3S-Xh-zc6">
+            <objects>
+                <viewController storyboardIdentifier="MemoContainerViewController" id="ZrF-VG-yoy" customClass="MemoContainerViewController" customModule="DoneDoneMemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4Of-bk-hMr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bJ1-Ag-PlN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="bJ1-Ag-PlN" id="Vvr-tN-a8M"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rDk-WW-b7c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1065" y="-89"/>
         </scene>
     </scenes>
 </document>
