--- a/DoneDoneMemo/View/StoryBoard/MemoContentViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/MemoContentViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qy9-3T-TtK">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -16,16 +16,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="85n-mI-jeC" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="MemoContentViewController" id="qy9-3T-TtK" customClass="MemoContentViewController" customModule="DoneDoneMemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kPx-WE-g0y">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cK6-gS-gNg">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cK6-gS-gNg">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8KY-fY-ZkS" firstAttribute="bottom" secondItem="cK6-gS-gNg" secondAttribute="bottom" id="6H9-FS-RbM"/>
+                            <constraint firstItem="cK6-gS-gNg" firstAttribute="leading" secondItem="8KY-fY-ZkS" secondAttribute="leading" id="IBk-QG-G0N"/>
+                            <constraint firstItem="cK6-gS-gNg" firstAttribute="trailing" secondItem="8KY-fY-ZkS" secondAttribute="trailing" id="nY6-lF-JZN"/>
+                            <constraint firstItem="cK6-gS-gNg" firstAttribute="top" secondItem="kPx-WE-g0y" secondAttribute="top" id="xOv-ym-KAA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="8KY-fY-ZkS"/>
                     </view>
                     <connections>
