--- a/DoneDoneMemo/View/StoryBoard/MemoViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/MemoViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bO5-4G-ikq">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qy9-3T-TtK">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -11,30 +11,35 @@
     </dependencies>
     <scenes>
         <!--Memo View Controller-->
-        <scene sceneID="sdq-bY-i6z">
+        <scene sceneID="Z5l-bW-irs">
             <objects>
-                <viewController storyboardIdentifier="MemoViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="bO5-4G-ikq" customClass="MemoViewController" customModule="DoneDoneMemo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ZXz-RN-6my">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController storyboardIdentifier="MemoContentViewController" id="qy9-3T-TtK" customClass="MemoViewController" customModule="DoneDoneMemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kPx-WE-g0y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4AP-4a-2XF">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                            </containerView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cK6-gS-gNg">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="4AP-4a-2XF" firstAttribute="leading" secondItem="NKJ-Uj-pdR" secondAttribute="leading" id="6fL-sG-6SC"/>
-                            <constraint firstItem="4AP-4a-2XF" firstAttribute="top" secondItem="NKJ-Uj-pdR" secondAttribute="top" id="NUT-ad-lnv"/>
-                            <constraint firstItem="NKJ-Uj-pdR" firstAttribute="bottom" secondItem="4AP-4a-2XF" secondAttribute="bottom" id="hS3-Wb-YYa"/>
-                            <constraint firstItem="4AP-4a-2XF" firstAttribute="trailing" secondItem="NKJ-Uj-pdR" secondAttribute="trailing" id="jUi-OP-KGA"/>
+                            <constraint firstItem="8KY-fY-ZkS" firstAttribute="bottom" secondItem="cK6-gS-gNg" secondAttribute="bottom" id="6H9-FS-RbM"/>
+                            <constraint firstItem="cK6-gS-gNg" firstAttribute="leading" secondItem="8KY-fY-ZkS" secondAttribute="leading" id="IBk-QG-G0N"/>
+                            <constraint firstItem="cK6-gS-gNg" firstAttribute="trailing" secondItem="8KY-fY-ZkS" secondAttribute="trailing" id="nY6-lF-JZN"/>
+                            <constraint firstItem="cK6-gS-gNg" firstAttribute="top" secondItem="kPx-WE-g0y" secondAttribute="top" id="xOv-ym-KAA"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="NKJ-Uj-pdR"/>
+                        <viewLayoutGuide key="safeArea" id="8KY-fY-ZkS"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="cK6-gS-gNg" id="To8-ne-cER"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x4P-ns-f4d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="85n-mI-jeC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="321" y="117"/>
+            <point key="canvasLocation" x="1065" y="-89"/>
         </scene>
     </scenes>
 </document>
